--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pentium/element-ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
   "files": [
@@ -68,7 +68,8 @@
     "throttle-debounce": "^1.0.1"
   },
   "peerDependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-virtual-scroll-list": "^2.2.3"
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.6.0",
